unpackaged/main/default/objects/BCAccount__c/BCAccount__c.object-meta.xml
<CustomObject>
    <description>Yummy delicious technical debt.  All because there&#39;s no stomach for best practice, at least when it requires a modicum of effort or work on someone else&#39;s behalf. So yes, this object effectively duplicates the data that&#39;s in another object, simply to support the Fusion project. I wish that I could be hopeful that some day this object could be deprecated in favor of the object it should be using, but I know that as soon as this is implemented, it will be cemented indefinitely.  So don&#39;t hate me, future owner of this system, just know that we were ordered to do these things, despite our most fervent objections.</description>
    <label>BCAccount</label>
    <nameField>
        <label>BCAccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BCAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>