unpackaged/main/default/objects/BCAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BCAccounts</relationshipLabel>
    <relationshipName>BCAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>