unpackaged/main/default/objects/BCAccount__c/fields/Account_Edition__c.field-meta.xml
<CustomField>
    <fullName>Account_Edition__c</fullName>
    <formula>TEXT( Brightcove_Account__r.Account_Edition__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Edition</label>
    <type>Text</type>
</CustomField>