unpackaged/main/default/objects/BCAccount__c/fields/Account_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Profile__c</fullName>
    <formula>UPPER(Brightcove_Account__r.Account_Owner_Profile__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Profile</label>
    <type>Text</type>
</CustomField>