unpackaged/main/default/objects/BCAccount__c/fields/BCAccountId__c.field-meta.xml
<CustomField>
    <fullName>BCAccountId__c</fullName>
    <formula>Brightcove_Account__r.Brightcove_Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BCAccountId</label>
    <type>Text</type>
</CustomField>