unpackaged/main/default/objects/BCAccount__c/fields/Brightcove_Account__c.field-meta.xml
<CustomField>
    <fullName>Brightcove_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Brightcove Account</label>
    <referenceTo>Brightcove_Account__c</referenceTo>
    <relationshipLabel>BCAccounts</relationshipLabel>
    <relationshipName>BCAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>