unpackaged/main/default/objects/BCAccount__c/fields/pub_id__c.field-meta.xml
<CustomField>
    <fullName>pub_id__c</fullName>
    <externalId>true</externalId>
    <label>pub id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>