unpackaged/main/default/objects/BCAccount__c/fields/Publisher_Status__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Status__c</fullName>
    <formula>TEXT( Brightcove_Account__r.Publisher_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publisher Status</label>
    <type>Text</type>
</CustomField>